@@ -1,3 +1,7 @@
+2005-02-12(jol):
+	- factorize some code inside egxp_protocol_handler.
+	- finished the protocol handler xml part.
+	
 2005-02-10(jol):
 	- replace free statement with the EFL FREE macro
 	- fix some error around the callback stuff ...
